--- a/parent/device-registry/src/main/resources/public/pages/template/view.html
+++ b/parent/device-registry/src/main/resources/public/pages/template/view.html
@@ -30,6 +30,26 @@
 					</div>
 				</td>
 			</tr>
+			<tr>
+				<td colspan="2">
+					<table id="metrics" class="table table-striped table-bordered table-sm">
+						<caption>
+							<label><strong>Metrics</strong></label>
+							<button class="btn btn-primary pull-right">New Metric</button>
+						</caption>
+						<thead>
+							<tr>
+								<th scope="col">Name</th>
+								<th scope="col">Abbreviation</th>
+								<th scope="col">Unit</th>
+								<th scope="col">Data Type</th>
+								<th scope="col">Description</th>
+								<th scope="col">&nbsp;</th>
+							</tr>
+						</thead>
+					</table>
+				</td>
+			</tr>
 		</table>
 	</div>
 </div>
