--- a/parent/device-registry/src/main/resources/public/pages/template/view.html
+++ b/parent/device-registry/src/main/resources/public/pages/template/view.html
@@ -36,7 +36,7 @@
 							</div>
 							<div class="form-group">
 								<label for="templateProperties">Properties</label> 
-								<textarea class="form-control" id="templateProperties" rows="5"></textarea>
+								<textarea class="form-control" id="templateProperties" rows="4"></textarea>
 							</div>
 						</td>
 					</tr>
@@ -46,7 +46,9 @@
 				<table id="metrics-table" class="table table-striped table-bordered table-sm" style="width:100%;">
 					<caption>
 						<label>Metrics for <strong id="metrics-tab-content-title"></strong></label>
-						<button class="btn btn-primary pull-right">New Metric</button>
+						<button class="btn btn-primary pull-right">
+							<span class="fa fa-plus"></span> New Metric
+						</button>
 					</caption>
 					<thead>
 						<tr>
@@ -64,8 +66,15 @@
 		
 	</div>
 	<div class="modal-footer">
-		<button type="button" class="btn btn-secondary">Cancel</button>
-		<button type="button" class="btn btn-primary" id="">Save</button>
+		<button id="cancelButton" type="button" class="btn btn-secondary">
+			<span class="fa fa-trash"></span> Cancel
+		</button>
+		<button id="refreshButton" type="button" class="btn btn-secondary">
+			<span class="fa fa-refresh"></span> Refresh
+		</button>
+		<button id="saveButton" type="button" class="btn btn-primary" id="">
+			<span class="fa fa-save"></span> Save
+		</button>
 	</div>
 </div>
 <script type="text/javascript" src="pages/template/view.js"></script>
