--- a/parent/device-registry/src/main/resources/public/pages/template/list.html
+++ b/parent/device-registry/src/main/resources/public/pages/template/list.html
@@ -1,4 +1,3 @@
-
 <section class="content-header">
 	<h1>
 		Templates <small>View a list of all templates</small>
@@ -29,4 +28,5 @@
 		</div>
 	</div>
 </section>
+<script type="text/javascript" src="pages/template/service.js"></script>
 <script type="text/javascript" src="pages/template/list.js"></script>
