--- a/parent/device-registry/src/main/resources/public/pages/template/view.html
+++ b/parent/device-registry/src/main/resources/public/pages/template/view.html
@@ -16,6 +16,7 @@
 				<table style="width:100%">
 					<tr>
 						<td width="50%" style="padding: 0 1em 0 0;">
+							<input type="text" style="display:none;" id="templateId">
 							<div class="form-group">
 								<label for="templateName">Name</label> 
 								<input type="text" class="form-control" id="templateName" placeholder="Template Name">
@@ -44,12 +45,6 @@
 			</div>
 			<div class="tab-pane" id="metrics-tab-content" role="tabpanel" aria-labelledby="metrics-tab">
 				<table id="metrics-table" class="table table-striped table-bordered table-sm" style="width:100%;">
-					<caption>
-						<label>Metrics for <strong id="metrics-tab-content-title"></strong></label>
-						<button class="btn btn-primary pull-right">
-							<span class="fa fa-plus"></span> New Metric
-						</button>
-					</caption>
 					<thead>
 						<tr>
 							<th scope="col">Name</th>
@@ -57,7 +52,11 @@
 							<th scope="col">Unit</th>
 							<th scope="col">Data Type</th>
 							<th scope="col">Description</th>
-							<th scope="col">&nbsp;</th>
+							<th scope="col">
+								<button class="btn btn-primary pull-right">
+									<span class="fa fa-plus"></span> New Metric
+								</button>
+							</th>
 						</tr>
 					</thead>
 				</table>
@@ -68,9 +67,6 @@
 	<div class="modal-footer">
 		<button id="cancelButton" type="button" class="btn btn-secondary">
 			<span class="fa fa-trash"></span> Cancel
-		</button>
-		<button id="refreshButton" type="button" class="btn btn-secondary">
-			<span class="fa fa-refresh"></span> Refresh
 		</button>
 		<button id="saveButton" type="button" class="btn btn-primary" id="">
 			<span class="fa fa-save"></span> Save
