--- a/parent/device-registry/src/main/resources/public/pages/template/view.html
+++ b/parent/device-registry/src/main/resources/public/pages/template/view.html
@@ -1,6 +1,6 @@
 <div class="modal-content" style="width: 50em;">
 	<div class="modal-header">
-		<h4 class="modal-title">View Template Details</h4>
+		<h4 class="modal-title">Template Details</h4>
 	</div>
 	<div class="modal-body">
 		<ul class="nav nav-tabs" role="tablist" data-tabs="tabs">
