--- a/parent/device-registry/src/main/resources/public/pages/template/view.html
+++ b/parent/device-registry/src/main/resources/public/pages/template/view.html
@@ -19,21 +19,21 @@
 							<input type="text" style="display:none;" id="templateId">
 							<div class="form-group">
 								<label for="templateName">Name</label> 
-								<label class="form-control" id="templateName"></label>
+								<input type="text" readonly="readonly" disabled="disabled" class="form-control" id="templateName">
 							</div>
 							<div class="form-group">
 								<label for="templateDescription">Description</label> 
-								<label class="form-control" id="templateDescription"></label>
+								<input type="text" readonly="readonly" disabled="disabled" class="form-control" id="templateDescription">
 							</div>
 							<div class="form-group">
 								<label for="inactivityPeriod">Inactivity Period</label> 
-								<label class="form-control" id="inactivityPeriod"></label>
+								<input type="text" readonly="readonly" disabled="disabled"  class="form-control" id="inactivityPeriod">
 							</div>
 						</td>
 						<td width="50%"  style="padding: 0 0 0 1em;">
 							<div class="form-group">
 								<label for="templateTags">Tags</label> 
-								<label class="form-control" id="templateTags"></label>
+								<input type="text" readonly="readonly" disabled="disabled"  class="form-control" id="templateTags">
 							</div>
 							<div class="form-group">
 								<label for="templateProperties">Properties</label> 
