--- a/parent/device-registry/src/main/resources/public/pages/templates/view.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/view.html
@@ -16,28 +16,28 @@
 				<table style="width:100%">
 					<tr>
 						<td width="50%" style="padding: 0 1em 0 0;">
-							<input type="text" style="display:none;" id="templateId">
+							<input type="text" style="display:none;" id="templateId" data-value="id">
 							<div class="form-group">
 								<label for="templateName">Name</label> 
-								<input type="text" class="form-control" id="templateName" placeholder="Template Name">
+								<input type="text" readonly="readonly" disabled="disabled" data-value="name" class="form-control" id="templateName">
 							</div>
 							<div class="form-group">
 								<label for="templateDescription">Description</label> 
-								<input type="text" class="form-control" id="templateDescription" placeholder="Template Description">
+								<input type="text" readonly="readonly" disabled="disabled" data-value="description" class="form-control" id="templateDescription">
 							</div>
 							<div class="form-group">
 								<label for="inactivityPeriod">Inactivity Period</label> 
-								<input type="text" class="form-control" id="inactivityPeriod" placeholder="Inactivity Period (in seconds)">
+								<input type="text" readonly="readonly" disabled="disabled" data-value="inactivityPeriod" class="form-control" id="inactivityPeriod">
 							</div>
 						</td>
 						<td width="50%"  style="padding: 0 0 0 1em;">
 							<div class="form-group">
 								<label for="templateTags">Tags</label> 
-								<input type="text" class="form-control" id="templateTags" placeholder="Tags (type and press Enter)">
+								<input type="text" readonly="readonly" disabled="disabled" data-value="tags" class="form-control" id="templateTags">
 							</div>
 							<div class="form-group">
 								<label for="templateProperties">Properties</label> 
-								<textarea class="form-control" id="templateProperties" rows="4"></textarea>
+								<textarea readonly="readonly" disabled="disabled" data-value="properties" data-format="MapFormatter" data-format-target="value" class="form-control" id="templateProperties" rows="4"></textarea>
 							</div>
 						</td>
 					</tr>
@@ -52,11 +52,6 @@
 							<th scope="col">Unit</th>
 							<th scope="col">Data Type</th>
 							<th scope="col">Description</th>
-							<th scope="col">
-								<button class="btn btn-primary pull-right">
-									<span class="fa fa-plus"></span> New Metric
-								</button>
-							</th>
 						</tr>
 					</thead>
 				</table>
@@ -68,10 +63,28 @@
 		<button id="cancelButton" type="button" class="btn btn-secondary">
 			<span class="fa fa-trash"></span> Cancel
 		</button>
-		<button id="saveButton" type="button" class="btn btn-primary" id="">
-			<span class="fa fa-save"></span> Save
-		</button>
 	</div>
 </div>
-<script type="text/javascript" src="pages/template/edit.js"></script>
+<script>
+$("#cancelButton").click(function(){
+	$.modal.close();
+});
+
+var showMetricsDataTable = function(metrics){
+	$("#metrics-table").DataTable({
+		searching: false,
+		ordering: false,
+		paging: false,
+		info: false,
+		data: metrics,
+		columns : [
+			{data: "name"},
+			{data: "abbreviation"},
+			{data: "unit"},
+			{data: "dataType"},
+			{data: "description"},
+		]
+	});
+}
+</script>
 
