--- a/parent/device-registry/src/main/resources/public/pages/templates/list.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/list.html
@@ -20,7 +20,7 @@
 								<th>Description</th>
 								<th>Tags</th>
 								<th>
-									<button class="btn btn-primary btn-sm">
+									<button class="btn btn-primary btn-sm" id="newTemplateButton">
 										<span class="fa fa-plus"></span> New Template
 									</button>
 								</th>
@@ -72,6 +72,10 @@
 		});
 	});
 
+	$("#newTemplateButton").click(function(){
+		$.publish("show-template-edit-modal");
+	});
+	
 	var showViewTemplateModal = function(source, event, id) {
 		event.preventDefault();
 		source.blur();
