--- a/parent/device-registry/src/main/resources/public/pages/templates/list.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/list.html
@@ -1,105 +1,94 @@
-<section class="content-header">
-	<h1>
-		Templates <small>View a list of all templates</small>
-	</h1>
-	<ol class="breadcrumb">
-		<li><a href="#"><i class="fa fa-clone"></i>Templates</a></li>
-	</ol>
-</section>
-<section class="content container-fluid">
-	<div class="row">
-		<div class="col-xs-12">
-			<div class="box">
-				<div class="box-body">
-					<table id="templates" class="table table-bordered table-striped"
-						style="width: 100%">
-						<thead>
-							<tr>
-								<th>Name</th>
-								<th>Inactivity Period</th>
-								<th>Description</th>
-								<th>Tags</th>
-								<th>
-									<button class="btn btn-primary btn-sm" id="newTemplateButton">
-										<span class="fa fa-plus"></span> New Template
-									</button>
-								</th>
-							</tr>
-						</thead>
-					</table>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box">
+            <div class="box-body">
+                <table id="templates" class="table table-bordered table-striped" style="width: 100%">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Inactivity Period</th>
+                            <th>Description</th>
+                            <th>Tags</th>
+                            <th>
+                                <button class="btn btn-primary btn-sm" id="newTemplateButton">
+                                    <span class="fa fa-plus"></span> New Template
+                                </button>
+                            </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 <script type="text/javascript">
-	var templatesDataTable = null;
-	templateService.findAll(function(templates){
-		templatesDataTable = $("#templates").DataTable({
-			rowId : "id",
-			language : {
-				processing : "Loading ..."
-			},
-			processing : true,
-			columns : [
-			        {
-			        	data : "name",
-			        	mRender : function(data, type, row) {
-			        		return '<a href="#" onclick="showViewTemplateModal(this, event, '+row.id+');">'+data+'</a>';
-			        	}
-			        },
-					{data : "inactivityPeriod"},
-					{data : "description"},
-					{data : "tags"},
-					{
-						mRender : function(data, type, row) {
-							return '<div class="btn-group" role="group">'+
-								'<button type="button" class="btn btn-warning btn-xs" onclick="showEditTemplateModal(this, event, '+row.id+');">'+
-									'<span class="fa fa-edit"></span> Edit'+
-								'</button>'+
-								'<button type="button" class="btn btn-danger btn-xs" onclick="showDeleteTemplateModal(this, event, '+row.id+')">'+
-									'<span class="fa fa-trash"></span> Delete'+
-								'</button>'+
-							'</div>';
-						}
-					} ],
-			columnDefs: [{
-				targets: -1,
-				orderable: false,
-				className: "text-center"
-			}],
-			data: templates
-		});
-	});
+    var templatesDataTable = null;
+    templateService.findAll(function (templates) {
+        templatesDataTable = $("#templates").DataTable({
+            rowId: "id",
+            language: {
+                processing: "Loading ..."
+            },
+            processing: true,
+            columns: [
+                {
+                    data: "name",
+                    mRender: function (data, type, row) {
+                        return '<a href="#" onclick="showViewTemplateModal(this, event, ' + row.id + ');">' + data + '</a>';
+                    }
+                },
+                { data: "inactivityPeriod" },
+                { data: "description" },
+                { data: "tags" },
+                {
+                    mRender: function (data, type, row) {
+                        return '<div class="btn-group" role="group">' +
+                            '<button type="button" class="btn btn-warning btn-xs" onclick="showEditTemplateModal(this, event, ' + row.id + ');">' +
+                            '<span class="fa fa-edit"></span> Edit' +
+                            '</button>' +
+                            '<button type="button" class="btn btn-danger btn-xs" onclick="showDeleteTemplateModal(this, event, ' + row.id + ')">' +
+                            '<span class="fa fa-trash"></span> Delete' +
+                            '</button>' +
+                            '</div>';
+                    }
+                }],
+            columnDefs: [{
+                targets: -1,
+                orderable: false,
+                className: "text-center"
+            }],
+            data: templates
+        });
+    });
 
-	$("#newTemplateButton").click(function(){
-		$.publish("show-template-edit-modal");
-	});
-	
-	var showViewTemplateModal = function(source, event, id) {
-		event.preventDefault();
-		source.blur();
-		$.publish("show-template-view-modal", id);
-	};
-	
-	var showEditTemplateModal = function(source, event, id) {
-		event.preventDefault();
-		source.blur();
-		$.publish("show-template-edit-modal", id);
-	};
-	
-	var showDeleteTemplateModal = function(source, event, id){
-		event.preventDefault();
-		source.blur();
-		row = templatesDataTable.row("#"+id);
-		$.publish("show-confirmation-modal", [{
-			message : "Are you sure you want to delete template "+row.data().name+" ?"
-		}, function(){
-			templateService.deleteById(id, function(){
-				row.remove().draw();
-				$.modal.close();
-			});
-		}]);
-	}
+    $("#newTemplateButton").click(function () {
+        $.publish("show-template-edit-modal");
+    });
+
+    var showViewTemplateModal = function (source, event, id) {
+        event.preventDefault();
+        source.blur();
+        $.publish("show-template-view-modal", id);
+    };
+
+    var showEditTemplateModal = function (source, event, id) {
+        event.preventDefault();
+        source.blur();
+        $.publish("show-template-edit-modal", id);
+    };
+
+    var showDeleteTemplateModal = function (source, event, id) {
+        event.preventDefault();
+        source.blur();
+        row = templatesDataTable.row("#" + id);
+        $.publish("show-confirmation-modal", [{
+            message: "Are you sure you want to delete template " + row.data().name + " ?"
+        }, function () {
+            templateService.deleteById(id, function () {
+                row.remove().draw();
+                $.modal.close();
+            });
+        }]);
+    }
 
 </script>
