--- a/parent/device-registry/src/main/resources/public/pages/templates/edit.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/edit.html
@@ -1,154 +1,160 @@
-<div class="modal-content" style="width: 60em;">
-	<div class="modal-header">
-		<h4 class="modal-title">Template Details</h4>
-	</div>
-	<div class="modal-body">
-		<ul class="nav nav-tabs" role="tablist" data-tabs="tabs">
-			<li class="nav-item active">
-				<a class="nav-link active" id="template-details-tab" data-toggle="tab" href="#template-details-tab-content" role="tab" aria-controls="template-details" aria-selected="true">Details</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" id="metrics-tab" data-toggle="tab" href="#metrics-tab-content" role="tab" aria-controls="metrics" aria-selected="false">Metrics</a>
-			</li>
-		</ul>
-		<div class="tab-content">
-			<div class="tab-pane active" id="template-details-tab-content" role="tabpanel" aria-labelledby="template-details-tab">
-				<table style="width:100%">
-					<tr>
-						<td width="50%" style="padding: 0 1em 0 0;">
-							<input type="text" style="display:none;" id="templateId">
-							<div class="form-group">
-								<label for="templateName">Name</label> 
-								<input type="text" class="form-control" id="templateName" data-value="name" placeholder="Template Name">
-							</div>
-							<div class="form-group">
-								<label for="templateDescription">Description</label> 
-								<input type="text" class="form-control" id="templateDescription" data-value="description" placeholder="Template Description">
-							</div>
-							<div class="form-group">
-								<label for="inactivityPeriod">Inactivity Period</label> 
-								<input type="text" class="form-control" id="inactivityPeriod" data-value="inactivityPeriod" placeholder="Inactivity Period (in seconds)">
-							</div>
-						</td>
-						<td width="50%"  style="padding: 0 0 0 1em;">
-							<div class="form-group">
-								<label for="templateTags">Tags</label> 
-								<input type="text" class="form-control" id="templateTags" data-value="tags" placeholder="Tags (type and press Enter)">
-							</div>
-							<div class="form-group">
-								<label for="templateProperties">Properties</label> 
-								<textarea placeholder="key=value" class="form-control" id="templateProperties" data-value="properties" data-format="MapFormatter" data-format-target="value" rows="4"></textarea>
-							</div>
-						</td>
-					</tr>
-				</table>
-			</div>
-			<div class="tab-pane" id="metrics-tab-content" role="tabpanel" aria-labelledby="metrics-tab">
-				<table id="metrics-table" class="table table-striped table-bordered table-sm" style="width:100%;">
-					<thead>
-						<tr>
-							<th scope="col">Name</th>
-							<th scope="col">Abbreviation</th>
-							<th scope="col">Unit</th>
-							<th scope="col">Data Type</th>
-							<th scope="col">Description</th>
-							<th scope="col">
-								<button class="btn btn-primary btn-sm" id="newMetricBtn">
-									<span class="fa fa-plus"></span> New Metric
-								</button>
-							</th>
-						</tr>
-					</thead>
-				</table>
-			</div>
-		</div>
-	</div>
-	<div class="modal-footer">
-		<button id="cancelButton" type="button" class="btn btn-secondary">
-			<span class="fa fa-trash"></span> Cancel
-		</button>
-		<button id="saveButton" type="button" class="btn btn-primary" id="">
-			<span class="fa fa-save"></span> Save
-		</button>
-	</div>
+<div class="card">
+    <div class="card-body">
+        <ul class="nav nav-tabs" role="tablist" data-tabs="tabs">
+            <li class="nav-item active">
+                <a class="nav-link active" id="template-details-tab" data-toggle="tab" href="#template-details-tab-content"
+                    role="tab" aria-controls="template-details" aria-selected="true">Details</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="metrics-tab" data-toggle="tab" href="#metrics-tab-content" role="tab"
+                    aria-controls="metrics" aria-selected="false">Metrics</a>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane active" id="template-details-tab-content" role="tabpanel" aria-labelledby="template-details-tab">
+                <table style="width:100%">
+                    <tr>
+                        <td width="50%" style="padding: 0 1em 0 0;">
+                            <input type="text" style="display:none;" id="templateId">
+                            <div class="form-group">
+                                <label for="templateName">Name</label>
+                                <input type="text" class="form-control" id="templateName" data-value="name" placeholder="Template Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="templateDescription">Description</label>
+                                <input type="text" class="form-control" id="templateDescription" data-value="description"
+                                    placeholder="Template Description">
+                            </div>
+                            <div class="form-group">
+                                <label for="inactivityPeriod">Inactivity Period</label>
+                                <input type="text" class="form-control" id="inactivityPeriod" data-value="inactivityPeriod"
+                                    placeholder="Inactivity Period (in seconds)">
+                            </div>
+                        </td>
+                        <td width="50%" style="padding: 0 0 0 1em;">
+                            <div class="form-group">
+                                <label for="templateTags">Tags</label>
+                                <input type="text" class="form-control" id="templateTags" data-value="tags" placeholder="Tags (type and press Enter)">
+                            </div>
+                            <div class="form-group">
+                                <label for="templateProperties">Properties</label>
+                                <textarea placeholder="key=value" class="form-control" id="templateProperties"
+                                    data-value="properties" data-format="MapFormatter" data-format-target="value" rows="4"></textarea>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="tab-pane" id="metrics-tab-content" role="tabpanel" aria-labelledby="metrics-tab">
+                <table id="metrics-table" class="table table-striped table-bordered table-sm" style="width:100%;">
+                    <thead>
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Abbreviation</th>
+                            <th scope="col">Unit</th>
+                            <th scope="col">Data Type</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">
+                                <button class="btn btn-primary btn-sm" id="newMetricBtn">
+                                    <span class="fa fa-plus"></span> New Metric
+                                </button>
+                            </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
+        <div>
+            <a href="#" id="saveButton" class="btn btn-primary pull-right">
+                <i class="fa fa-save"></i> Save
+            </a>
+            <a href="#" id="cancelButton" class="btn btn-secondary pull-right">
+                <i class="fa fa-trash"></i> Cancel
+            </a>
+        </div>
+    </div>
+
 </div>
+
+
+
 <script>
-$("#cancelButton").click(function(){
-	$.modal.close();
-});
+    $("#page-title").html("Edit Template Details");
+    $("#cancelButton").click(function () {
+        $.modal.close();
+    });
 
-var metricsData = null;
-var metricsDataTable = null;
-var showMetricsDataTable = function(metrics){
-	metricsData = metrics;
-	metricsDataTable = $("#metrics-table").DataTable({
-		rowId : "id",		
-		searching: false,
-		ordering: false,
-		paging: false,
-		info: false,
-		data: metrics,
-		columnDefs: [{
-			targets: -1,
-			className: "text-center"
-		}],
-		columns : [
-			{data: "name"},
-			{data: "abbreviation"},
-			{data: "unit"},
-			{data: "dataType"},
-			{data: "description"},
-			{
-				render : function(data, type, full, meta) {
-					return '<div class="btn-group" role="group">'+
-						'<button type="button" class="btn btn-warning btn-xs" onclick="showMatricEditorModal(this, event, '+meta.row+');">'+
-							'<span class="fa fa-edit"></span> Edit'+
-						'</button>'+
-						'<button type="button" class="btn btn-danger btn-xs">'+
-							'<span class="fa fa-trash"></span> Delete'+
-						'</button>'+
-					'</div>';
-				}
-			}
-		]
-	});
-}
+    var metricsData = null;
+    var metricsDataTable = null;
+    var showMetricsDataTable = function (metrics) {
+        metricsData = metrics;
+        metricsDataTable = $("#metrics-table").DataTable({
+            rowId: "id",
+            searching: false,
+            ordering: false,
+            paging: false,
+            info: false,
+            data: metrics,
+            columnDefs: [{
+                targets: -1,
+                className: "text-center"
+            }],
+            columns: [
+                { data: "name" },
+                { data: "abbreviation" },
+                { data: "unit" },
+                { data: "dataType" },
+                { data: "description" },
+                {
+                    render: function (data, type, full, meta) {
+                        return '<div class="btn-group" role="group">' +
+                            '<button type="button" class="btn btn-warning btn-xs" onclick="showMatricEditorModal(this, event, ' + meta.row + ');">' +
+                            '<span class="fa fa-edit"></span> Edit' +
+                            '</button>' +
+                            '<button type="button" class="btn btn-danger btn-xs">' +
+                            '<span class="fa fa-trash"></span> Delete' +
+                            '</button>' +
+                            '</div>';
+                    }
+                }
+            ]
+        });
+    }
 
-$("#newMetricBtn").click(function(){
-	showMetricEditView(null);
-});
+    $("#newMetricBtn").click(function () {
+        showMetricEditView(null);
+    });
 
-var showMatricEditorModal = function(source, event, index){
-	event.preventDefault();
-	source.blur();
-	metric = metricsDataTable.row(index).data();
-	showMetricEditView(metric);
-}
+    var showMatricEditorModal = function (source, event, index) {
+        event.preventDefault();
+        source.blur();
+        metric = metricsDataTable.row(index).data();
+        showMetricEditView(metric);
+    }
 
-var showMetricEditView = function(metric){
-	$("#modal-container-1").loadTemplate("pages/metrics/edit.html", metric, {
-		success: function(){
-			metricEditorModal = $("#modal-container-1").modal({
-				closeExisting: false
-			});
-			$("#metricName").focus();
-			$("#metricEditorCancelButton").click(function(){
-				$.modal.close();
-			});
-			$("#metricEditorSaveButton").click(function(){
-				if(metric){
-					populateMetric(metric);
-				}else{
-					newMetric = {};
-					populateMetric(newMetric);
-					metricsData.push(newMetric);
-				}
-				metricsDataTable.clear().rows.add(metricsData).draw();
-				$.modal.close();
-			});
-		}
-	});
-}
+    var showMetricEditView = function (metric) {
+        $("#modal-container-1").loadTemplate("pages/metrics/edit.html", metric, {
+            success: function () {
+                metricEditorModal = $("#modal-container-1").modal({
+                    closeExisting: false
+                });
+                $("#metricName").focus();
+                $("#metricEditorCancelButton").click(function () {
+                    $.modal.close();
+                });
+                $("#metricEditorSaveButton").click(function () {
+                    if (metric) {
+                        populateMetric(metric);
+                    } else {
+                        newMetric = {};
+                        populateMetric(newMetric);
+                        metricsData.push(newMetric);
+                    }
+                    metricsDataTable.clear().rows.add(metricsData).draw();
+                    $.modal.close();
+                });
+            }
+        });
+    }
 
 </script>
-
