--- a/parent/device-registry/src/main/resources/public/pages/templates/edit.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/edit.html
@@ -1,69 +1,67 @@
 <div class="card">
     <div class="card-body">
-        <ul class="nav nav-tabs" role="tablist" data-tabs="tabs">
-            <li class="nav-item active">
-                <a class="nav-link active" id="template-details-tab" data-toggle="tab" href="#template-details-tab-content"
-                    role="tab" aria-controls="template-details" aria-selected="true">Details</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" id="metrics-tab" data-toggle="tab" href="#metrics-tab-content" role="tab"
-                    aria-controls="metrics" aria-selected="false">Metrics</a>
-            </li>
-        </ul>
-        <div class="tab-content">
-            <div class="tab-pane active" id="template-details-tab-content" role="tabpanel" aria-labelledby="template-details-tab">
-                <table style="width:100%">
-                    <tr>
-                        <td width="50%" style="padding: 0 1em 0 0;">
-                            <input type="text" style="display:none;" id="templateId">
-                            <div class="form-group">
-                                <label for="templateName">Name</label>
-                                <input type="text" class="form-control" id="templateName" data-value="name" placeholder="Template Name">
-                            </div>
-                            <div class="form-group">
-                                <label for="templateDescription">Description</label>
-                                <input type="text" class="form-control" id="templateDescription" data-value="description"
-                                    placeholder="Template Description">
-                            </div>
-                            <div class="form-group">
-                                <label for="inactivityPeriod">Inactivity Period</label>
-                                <input type="text" class="form-control" id="inactivityPeriod" data-value="inactivityPeriod"
-                                    placeholder="Inactivity Period (in seconds)">
-                            </div>
-                        </td>
-                        <td width="50%" style="padding: 0 0 0 1em;">
-                            <div class="form-group">
-                                <label for="templateTags">Tags</label>
-                                <input type="text" class="form-control" id="templateTags" data-value="tags" placeholder="Tags (type and press Enter)">
-                            </div>
-                            <div class="form-group">
-                                <label for="templateProperties">Properties</label>
-                                <textarea placeholder="key=value" class="form-control" id="templateProperties"
-                                    data-value="properties" data-format="MapFormatter" data-format-target="value" rows="4"></textarea>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div class="tab-pane" id="metrics-tab-content" role="tabpanel" aria-labelledby="metrics-tab">
-                <table id="metrics-table" class="table table-striped table-bordered table-sm" style="width:100%;">
-                    <thead>
-                        <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">Abbreviation</th>
-                            <th scope="col">Unit</th>
-                            <th scope="col">Data Type</th>
-                            <th scope="col">Description</th>
-                            <th scope="col">
-                                <button class="btn btn-primary btn-sm" id="newMetricBtn">
-                                    <span class="fa fa-plus"></span> New Metric
-                                </button>
-                            </th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-        </div>
+
+        <table style="width:100%">
+            <tr>
+                <td width="33.33%" style="padding: 0 1em 0 0;">
+                    <input type="text" style="display:none;" id="templateId">
+                    <div class="form-group">
+                        <label for="templateName">Name</label>
+                        <input type="text" class="form-control" id="templateName" data-value="name" placeholder="Template Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="templateDescription">Description</label>
+                        <input type="text" class="form-control" id="templateDescription" data-value="description"
+                            placeholder="Template Description">
+                    </div>
+
+                </td>
+                <td width="33.33%" style="padding: 0 1em 0 1em;">
+                    <div class="form-group">
+                        <label for="templateTags">Tags</label>
+                        <input type="text" class="form-control" id="templateTags" data-value="tags" placeholder="Tags (type and press Enter)">
+                    </div>
+                    <div class="form-group">
+                        <label for="inactivityPeriod">Inactivity Period</label>
+                        <input type="text" class="form-control" id="inactivityPeriod" data-value="inactivityPeriod"
+                            placeholder="Inactivity Period (in seconds)">
+                    </div>
+                </td>
+                <td width="33.33%" style="padding: 0 0 0 1em;">
+                    <div class="form-group">
+                        <label for="templateProperties">Properties</label>
+                        <textarea placeholder="key=value" class="form-control" id="templateProperties" data-value="properties"
+                            data-format="MapFormatter" data-format-target="value" rows="5"></textarea>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <h3>
+                        Metrics
+                    </h3>
+                    <table id="metrics-table" class="table table-striped table-bordered table-sm" style="width:100%;">
+                        <thead>
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Abbreviation</th>
+                                <th scope="col">Unit</th>
+                                <th scope="col">Data Type</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">
+                                    <button class="btn btn-primary btn-sm" id="newMetricBtn">
+                                        <span class="fa fa-plus"></span> New Metric
+                                    </button>
+                                </th>
+                            </tr>
+                        </thead>
+                    </table>
+                </td>
+            </tr>
+        </table>
+
+
+
         <div>
             <a href="#" id="saveButton" class="btn btn-primary pull-right">
                 <i class="fa fa-save"></i> Save
@@ -72,8 +70,9 @@
                 <i class="fa fa-trash"></i> Cancel
             </a>
         </div>
-    </div>
 
+
+    </div>
 </div>
 
 
