--- a/parent/device-registry/src/main/resources/public/pages/templates/edit.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/edit.html
@@ -60,14 +60,12 @@
             </tr>
         </table>
 
-
-
-        <div>
-            <a href="#" id="saveButton" class="btn btn-primary pull-right">
-                <i class="fa fa-save"></i> Save
-            </a>
-            <a href="#" id="cancelButton" class="btn btn-secondary pull-right">
+        <div class="button-bar">
+            <a href="#" id="cancelButton" class="btn btn-secondary">
                 <i class="fa fa-trash"></i> Cancel
+            </a>
+            <a href="#" id="saveButton" class="btn btn-primary">
+                <i class="fa fa-save"></i> Save
             </a>
         </div>
 
